zeppelin/zeppelin-svc.yaml
---
kind: Service
apiVersion: v1
metadata:
  labels:
    app: zeppelin
    tier: backend
  name: zeppelin
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    name: zeppelin
  selector:
    app: zeppelin
    tier: backend
